Closed Bug 397011 Opened 18 years ago Closed 18 years ago

[FIX]Leak nsGenericElement and more with -moz-column, float

Categories

(Core :: Layout, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta1

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: memory-leak, testcase)

Attachments

(3 files)

Attached file testcase
If you load the testcase with XPCOM_MEM_LEAK_LOG=2 and quit, you'll see that over a dozen types of objects leaked. The total size of the leaks is 860 bytes. I'm setting this bug's severity to "minor" because it wasn't found on a real-world web page.
Attached file what leaked
reftests/bugs/386147-1.html triggers a similar leak.
nsCSSFrameConstructor::CreateContinuingFrame on a placeholder calls Init() twice, so leaks the content node. This has been a problem for a while, apparently...
This is still leaking an nsSimpleNestedURI
Assignee: nobody → bzbarsky
OS: Mac OS X → All
Priority: -- → P2
Hardware: PC → All
Summary: Leak nsGenericElement and more with -moz-column, float → [FIX]Leak nsGenericElement and more with -moz-column, float
Target Milestone: --- → mozilla1.9 M9
Attachment #281856 - Flags: superreview?(roc)
Attachment #281856 - Flags: review?(roc)
Attachment #281856 - Flags: superreview?(roc)
Attachment #281856 - Flags: superreview+
Attachment #281856 - Flags: review?(roc)
Attachment #281856 - Flags: review+
Checked in. Given comment 2, should I just mark this in-testsuite+?
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Can you file a new bug on the nsSimpleNestedURI leak?
I've only been able to reproduce it the once. If I can reproduce reliably, I will, but...
Crashtest checked in, just to be sure.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: