Fix content leak due to double-init of oveflow placeholders.  Bug 397011, r+sr+a=roc